# Cyborg-miner

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_triton.sh
.github/workflows/: release.yml
child-runtimes/neuro-zk-runtime/: Cargo.toml
child-runtimes/neuro-zk-runtime/src/: lib.rs
child-runtimes/open-inference-runtime/: Cargo.toml
child_runtimes/neuro_zk_runtime/: Cargo.toml
child_runtimes/neuro_zk_runtime/src/: lib.rs
flash-infer-runtime/: Cargo.toml
flash-infer-runtime/src/: lib.rs
gatekeeper-docker/: Dockerfile
miner/: Cargo.toml
miner-docker/: Dockerfile
miner/src/: builder.rs  cli.rs  config.rs  error.rs  log.rs  main.rs  self_update.rs  specs.rs  substrate_interface.rs  traits.rs  types.rs
miner/src/crypto/: aes.rs  dhx.rs  mod.rs
miner/src/parachain_interactor/: behavior_control.rs  cess_interactor.rs  event_processor.rs  identity.rs  logs.rs  mod.rs  registration.rs  task_management.rs
miner/src/parent_runtime/: cess_interactor.rs  huggingface_interactor.rs  inference.rs  mod.rs  proof.rs  server_control.rs  setup.rs  storage_interactor.rs
miner/src/parent_runtime/storage_interactor/: huggingface.rs  mod.rs  onnx.rs
miner/src/utils/: mod.rs  substrate_queries.rs  substrate_transactions.rs  tx_builder.rs  tx_queue.rs
neuro-zk-runtime/: Cargo.toml
neuro-zk-runtime/src/: lib.rs
open-inference-runtime/: Cargo.toml  readme.md  test_data.json
open-inference-runtime/src/: client.rs  error.rs  lib.rs  models.rs  tokenizer.rs
runtimes/neuro_zk_runtime/src/: lib.rs
runtimes/open_inference_runtime/: Cargo.toml
scripts/: installer.sh  setup.sh  update-stager.sh
src/: builder.rs  cli.rs  error.rs  main.rs  specs.rs  substrate_interface.rs  traits.rs  types.rs  worker.rs
src/parachain_interactor/: cess_interactor.rs  config.rs  event_processor.rs  logs.rs  mod.rs  registration.rs  task_management.rs
src/parent_runtime/: inference.rs  mod.rs  proof.rs
src/utils/: mod.rs  substrate_queries.rs  substrate_transactions.rs  transaction_queue.rs
