[workspace]
members = [
	"miner",
	"neuro-zk-runtime",
	"open-inference-runtime",
]

[workspace.dependencies]
async-stream = { version = "0.3.6" }
futures = { version = "0.3.28" }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
tokio = { version = "1.41.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
tracing-appender = { version = "0.2.3" }



miner = { path = "miner" }
neuro-zk-runtime = { path = "neuro-zk-runtime" }
open-inference-runtime = { path = "open-inference-runtime" }