[package]
name = "cyborg-miner"
description = "An AI inference mine, designed to connect to the cyborg-network, built, among others with Polkadot SDK."
version = "0.1.0"
license = "Unlicense"
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
edition = "2021"
homepage = "https://cyborgnetwork.io/"
repository = "https://github.com/Cyborg-Network/Cyborg-miner/"
publish = false

# [[bin]]
# name = "cyborg-miner"

[dependencies]
neuro-zk-runtime = { workspace = true }
open-inference-runtime = { workspace = true }

async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

async-trait = { git = "https://github.com/dtolnay/async-trait.git" }
axum = { version = "0.8.4", features = ["ws"] }
axum-macros = { version = "0.5.0" }
cess-rust-sdk = { git = 'https://github.com/CESSProject/cess-rust-sdk.git' , branch = 'cess-v0.7.9-venus' }
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
color-print = { version = "0.3.4" } 
derive_more = { version = "1.0.0", features = ["from"] }
dirs = "5.0.1"
docify = { version = "0.2.8" }
dotenv = "0.15.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
fs2 = "0.4.3"
hex = { version = "0.4.3" } 
jsonrpsee = { version = "0.22", features = ["server"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
nix = { version = "0.30.1", features = ["user"] }
sp-api = { version = "33.0.0", default-features = false }
sp-blockchain = { version = "35.0.0" }
sp-core = { version = "34.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
subxt = { version = "0.38" }
subxt-signer = "0.38.0"
sys-info = { version = "0.9.1" }
sysinfo = "0.32.0"
tar = { version = "0.4.44" }
url = { version = "2.5.2" }
zbus = "5.1.1"
zbus_names = "4.1.0"
zip = "2.2.0"
zstd = "0.13.3"

[build-dependencies]

[dev-dependencies]
mockall = "0.13.1"

[features]
default = []
runtime-benchmarks = ["sp-runtime/runtime-benchmarks"]
try-runtime = ["sp-runtime/try-runtime"]

