[package]
name = "neuro-zk-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
futures = { workspace = true }

ezkl = { git = "https://github.com/zkonduit/ezkl.git", tag = "v22.0.1" }
tokio = "1.41.0"
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
flate2 = { version = "1.1.1" }
tar = { version = "0.4.44" }
zstd = "0.13.3"
sha2 = "0.10.9"