[package]
name = "open-inference-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
zip = "0.6"
image = "0.24"
csv = "1.1"
tempfile = "3.3"
base64 = "0.21"
sha2 = "0.10"   

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.3"