[package]
name = "open-inference-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { version = "0.11", features = ["json", "gzip"] }
rand = "0.9.2"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
flate2 = "1.0"
tar = "0.4"
thiserror = "1.0"
zip = "0.6"
image = "0.24"
csv = "1.1"
tempfile = "3.3"
base64 = "0.21"
sha2 = "0.10"  
hex = "0.4"



[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.3"